# type-safety-workshop

./: .gitignore  Cargo.toml  LICENSE  README.md  WALKTHROUGH.md
scripts/: setup.ps1  setup.sh
skill/: SKILL.md
src/: full_pipeline.rs  lib.rs
src/bonus/: phantom_types.rs  phantom_types_solution.rs
src/exercises/: ex01_option.rs  ex02_result.rs  ex03_newtypes.rs  ex04_transforms.rs  ex05_typestate.rs
src/solutions/: sol01_option.rs  sol02_result.rs  sol03_newtypes.rs  sol04_transforms.rs  sol05_typestate.rs
